--- a/frontend/src/app/core/card/card-info.component.html
+++ b/frontend/src/app/core/card/card-info.component.html
@@ -5,15 +5,17 @@
       <i [ngClass]="iconClasses" class="text-2xl"></i>
     </div>
     <div class="ml-3">
-      <h2 class="card-title text-lg font-semibold">{{ titleCard }}</h2>
+      <div class="flex justify-start items-center space-x-2">
+        <h2 class="card-title text-lg font-semibold">{{ titleCard }}</h2>
+        <div *ngIf="tooltipText">
+          <div class="tooltip tooltip-bottom" [attr.data-tip]="tooltipText" style="max-width: 150px;">
+            <i class="fa-lg fa-solid fa-circle-info text-primary"></i>
+          </div>
+        </div>
+      </div>
       <p class="text-xs text-gray-500">{{ subtitleCard }}</p>
     </div>
 
-  </div>
-  <div *ngIf="tooltipText">
-    <div class="tooltip tooltip-right tooltip-sm" [attr.data-tip]="tooltipText"  style="max-width: 150px;">
-      <i class="fa-lg fa-solid fa-circle-info text-primary"></i>
-    </div>
   </div>
   <!-- Información principal y progreso -->
   <div class="mt-2">
