--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -29,7 +29,7 @@
         <select class=" p-2 border-none outline-none bg-transparent text-gray-500"
                 (change)="onDeviceChange($event)">
           <option *ngFor="let device of devices" [value]="device.deviceId">
-            {{ device.deviceId }}
+            {{ device.name }}
           </option>
         </select>
       </div>
