--- a/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
+++ b/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
@@ -1,16 +1,60 @@
 <app-panel-title title="Históricos" description="Seleccione un gráfico para verlo en pantalla completa."></app-panel-title>
 
 
-<div class="grid grid-cols-1 md:grid-cols-2 gap-4 py-6 px-3">
+<div class="grid grid-cols-1 md:grid-cols-2 gap-4 py-1 px-3">
 
-  <div class="card bg-base-100 shadow-xl p-4 cursor-pointer" (click)="abrirModal('consumoMensual')">
-    <p class="text-mx font-semibold text-gray-700 mb-4">Consumo Mensual</p>
+  <div class="card bg-base-100 shadow-xl p-4 cursor-pointer" (click)="abrirModal('cargarConsumoUltimoMes')">
+    <p class="text-mx font-semibold text-gray-700 mb-4">Watts del Ultimo Año</p>
     <div class="border rounded-lg flex items-center justify-center overflow-hidden" style="height: 300px;">
-      <iframe [src]="consumoMensual | safeUrl" class="w-full h-full object-contain"></iframe>
+      <iframe [src]="powerLastYearUrl"  class="w-full h-full object-contain"></iframe>
+    </div>
+  </div>
+
+  <div class="card bg-base-100 shadow-xl p-4 cursor-pointer" (click)="abrirModal('cargarConsumoUltimoAño')">
+    <p class="text-mx font-semibold text-gray-700 mb-4">Voltaje del Ultimo Año    </p>
+    <div class="border rounded-lg flex items-center justify-center overflow-hidden" style="height: 300px;">
+      <iframe [src]="voltageLastYearUrl" class="w-full h-full object-contain"></iframe>
+    </div>
+  </div>
+
+  <div class="card bg-base-100 shadow-xl p-4 cursor-pointer" (click)="abrirModal('cargarPotencia')">
+    <p class="text-mx font-semibold text-gray-700 mb-4">Consumo del Ultimo Mes</p>
+    <div class="border rounded-lg flex items-center justify-center overflow-hidden" style="height: 300px;">
+      <iframe [src]="histEnergyMonthUrl" class="w-full h-full object-contain"></iframe>
+    </div>
+  </div>
+
+  <div class="card bg-base-100 shadow-xl p-4 cursor-pointer" (click)="abrirModal('cargarVoltaje')">
+    <p class="text-mx font-semibold text-gray-700 mb-4">Consumo del Ultimo Año</p>
+    <div class="border rounded-lg flex items-center justify-center overflow-hidden" style="height: 300px;">
+      <iframe [src]="histEnergyUrl" class="w-full h-full object-contain"></iframe>
     </div>
   </div>
 
 
+
+</div>
+<div class="mt-12 mb-12">
+  <app-panel-title title="Alertas Históricas" description="Elija el tipo de alerta disponible."></app-panel-title>
+
+  <div class="px-4 lg:ml-12">
+    <select class="p-2 border rounded w-full sm:w-1/3 lg:w-1/4 my-2" (change)="aplicarFiltro($event)">
+      <option value="todos">Todos</option>
+      <option value="corte">Corte de energía</option>
+      <option value="dispositivo">Nuevo dispositivo</option>
+      <option value="consumo">Alerta de alto consumo</option>
+    </select>
+  </div>
+
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+    <div *ngFor="let alerta of getAlertasFiltradas()"
+         class="bg-white p-4 rounded-lg shadow-lg transition-colors duration-300 hover:bg-blue-300 hover:text-white">
+      <p class="text-gray-700">{{ alerta.descripcion }}</p>
+    </div>
+  </div>
+</div>
+
+<!--
   <div class="card bg-base-100 shadow-xl p-4 cursor-pointer" (click)="abrirModal('amperaje')">
     <p class="text-mx font-semibold text-gray-700 mb-4">Intensidad de Amperaje</p>
     <div class="border rounded-lg flex items-center justify-center overflow-hidden" style="height: 300px;">
@@ -79,3 +123,4 @@
     </div>
   </div>
 </div>
+-->
