--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
 
   </div>
 </div>
-<div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-6 px-3 " id="step5">
+<div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-6 px-3 " id="step5" *ngIf="voltUrl && ampUrl && wattUrl && kwhUrl">
 
   <dashboard-panel
     title= "Voltaje {{ voltage }} V"
