--- a/frontend/src/app/routes/configuracion/configuracion.component.html
+++ b/frontend/src/app/routes/configuracion/configuracion.component.html
@@ -7,12 +7,12 @@
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
 
     <div class="card bg-base-100 shadow-xl p-6 transform transition-transform hover:scale-105"
-         [ngClass]="{'bg-blue-200': selectedProfile === 'small'}"
+         [ngClass]="{'expanded-card': expanded['small']}"
          (click)="selectProfile('small')">
       <img src="./assets/img/casapequenia.png" alt="Imagen de apartamento pequeño" class="w-full h-40 object-cover mb-4 rounded-lg">
       <div>
         <h2 class="card-title">Apartamento Pequeño</h2><br>
-        <div [ngClass]="{'truncate-text': !expanded['small']}" class="card-content">
+        <div [ngClass]="{'truncate-text': !expanded['small']}" class="card-content overflow-hidden">
           <p>Descripción: Este perfil está diseñado para personas que viven en apartamentos de uno o dos ambientes.
             Generalmente para solteros o parejas sin hijos.</p>
           <p>Tamaño: 30-60 m².</p>
@@ -34,12 +34,12 @@
 
 
     <div class="card bg-base-100 shadow-xl p-6 transform transition-transform hover:scale-105"
-         [ngClass]="{'bg-blue-200': selectedProfile === 'medium'}"
+         [ngClass]="{'expanded-card': expanded['medium']}"
          (click)="selectProfile('medium')">
       <img src="./assets/img/casamediana.png" alt="Imagen de casa mediana" class="w-full h-40 object-cover mb-4 rounded-lg">
       <div>
         <h2 class="card-title">Casa Mediana</h2><br>
-        <div [ngClass]="{'truncate-text': !expanded['medium']}" class="card-content">
+        <div [ngClass]="{'truncate-text': !expanded['medium']}" class="card-content overflow-hidden">
           <p>Descripción: Hogares típicos de familias pequeñas o medianas, con varios ambientes y una cantidad moderada de electrodomésticos. Apropiado para una familia con 1 o 2 hijos.</p>
           <p>Tamaño: 80-150 m².</p>
           <p>Electrodomésticos típicos:</p>
@@ -62,12 +62,12 @@
 
 
     <div class="card bg-base-100 shadow-xl p-6 transform transition-transform hover:scale-105"
-         [ngClass]="{'bg-blue-200': selectedProfile === 'large'}"
+         [ngClass]="{'expanded-card': expanded['large']}"
          (click)="selectProfile('large')">
       <img src="./assets/img/casagrande.png" alt="Imagen de casa grande" class="w-full h-40 object-cover mb-4 rounded-lg">
       <div>
         <h2 class="card-title">Casa Grande con Jardín</h2><br>
-        <div [ngClass]="{'truncate-text': !expanded['large']}" class="card-content">
+        <div [ngClass]="{'truncate-text': !expanded['large']}" class="card-content overflow-hidden">
           <p>Descripción: Viviendas más grandes, con varios ambientes y jardines, que suelen requerir un mayor consumo energético. Hogares familiares con varios hijos o personas con un estilo de vida más activo.</p>
           <p>Tamaño: 150-250 m².</p>
           <p>Electrodomésticos típicos:</p>
@@ -90,12 +90,12 @@
 
 
     <div class="card bg-base-100 shadow-xl p-6 transform transition-transform hover:scale-105"
-      [ngClass]="{'bg-blue-200': selectedProfile === 'personalized'}"
+         [ngClass]="{'expanded-card': expanded['personalized']}"
       (click)="selectProfile('personalized')">
         <img src="./assets/img/personalizado.png" alt="Imagen de apartamento pequeño" class="w-full h-40 object-cover mb-4 rounded-lg">
         <div class="ml-4">
           <h2 class="card-title">Personalizado</h2><br>
-          <div [ngClass]="{'truncate-text': !expanded['personalized']}" class="card-content">
+          <div [ngClass]="{'truncate-text': !expanded['personalized']}" class="card-content overflow-hidden">
           <p>Descripción: Este perfil es ideal para hogares que no encajan en las categorías anteriores. El usuario
             puede ajustar manualmente el consumo según la cantidad de electrodomésticos y habitaciones.</p>
           <p>Configuración: Permite elegir cuántos ambientes tiene el hogar y cuántos electrodomésticos hay en cada uno, lo que brinda flexibilidad.</p>
