--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
 
   <dashboard-panel
     title="Amperaje {{current}} A"
-    description="Indica cuánta electricidad está pasando por el sistema, como el flujo de agua en una tubería."
+    description="Indica cuánta electricidad está pasando por el sistema."
     [url]="ampUrl"
     modalDescription="El amperaje mide la cantidad de electricidad que fluye hacia sus dispositivos en este instante. Es similar al caudal de agua en una cañería: un mayor amperaje indica un uso más intensivo de la electricidad. Un incremento en el amperaje puede reflejar que más dispositivos están en funcionamiento o que están operando a mayor potencia."
     tooltipText="El amperaje mide la cantidad de electricidad que fluye hacia sus dispositivos en este instante. Es similar al caudal de agua en una cañería: un mayor amperaje indica un uso más intensivo de la electricidad. Un incremento en el amperaje puede reflejar que más dispositivos están en funcionamiento o que están operando a mayor potencia."
@@ -54,7 +54,7 @@
 
   <dashboard-panel
     title="Watts {{power}} W"
-    description="Muestra cuánta energía estás usando en este momento, similar al combustible que usan tus dispositivos."
+    description="Muestra cuánta energía estás usando en este momento"
     [url]="wattUrl"
     modalDescription="Los watts indican la cantidad de energía que está utilizando en este momento. Es el 'combustible' que requieren sus aparatos para funcionar. A mayor cantidad de watts, mayor será el consumo de energía en tiempo real. Esta medida le permite conocer cuánta electricidad demandan sus dispositivos en el presente."
     tooltipText="Los watts indican la cantidad de energía que está utilizando en este momento. Es el 'combustible' que requieren sus aparatos para funcionar. A mayor cantidad de watts, mayor será el consumo de energía en tiempo real. Esta medida le permite conocer cuánta electricidad demandan sus dispositivos en el presente."
@@ -62,7 +62,7 @@
 
   <dashboard-panel
     title="{{energy}} kWh"
-    description="Indica la cantidad de electricidad que has usado durante un período. Es útil para entender tu consumo acumulado."
+    description="Indica la cantidad de electricidad que has usado en este instante"
     [url]="kwhUrl"
     modalDescription="El kilovatio-hora (kWh) es una unidad de medida que refleja el consumo acumulado de electricidad durante un período determinado. Es similar a los kilómetros recorridos por un vehículo: cuanto mayor sea el número de kWh, más energía ha consumido en total. Esta métrica resulta útil para tener un panorama general de su consumo y anticipar el costo de su factura mensual."
     tooltipText="El kilovatio-hora (kWh) es una unidad de medida que refleja el consumo acumulado de electricidad durante un período determinado. Es similar a los kilómetros recorridos por un vehículo: cuanto mayor sea el número de kWh, más energía ha consumido en total. Esta métrica resulta útil para tener un panorama general de su consumo y anticipar el costo de su factura mensual."
