--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -33,6 +33,9 @@
           </option>
         </select>
       </div>
+      <div class="ml-1 bg-blue-100 rounded-full p-1 flex items-center justify-center mb-1">
+        <img [src]="'../../../assets/icon/' + deviceName + '.png'" alt="" width="32" height="32">
+      </div>
     </div>
   </div>
 
