--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -16,49 +16,49 @@
   <div class="mb-auto">
     <ul class="menu menu-sm bg-base-100 rounded-box z-[1] p-2">
       <li class="p-2">
-        <a [routerLink]="['dashboard']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Dashboard">
+        <a [routerLink]="['dashboard']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Dashboard">
           <i class=" inline-block fa-lg fa-solid fa-gauge-high" ></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Dashboard</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['dispositivos']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Mis Dispositivos">
+        <a [routerLink]="['dispositivos']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Mis Dispositivos">
           <i class=" inline-block fa-lg fa-solid fa-plug"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Mis Dispositivos</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['alerts']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Alertas">
+        <a [routerLink]="['alerts']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Alertas">
           <i class="inline-block fa-lg fa-solid fa-bell"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Alertas</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['consume']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Alertas">
+        <a [routerLink]="['consume']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Alertas">
           <i class="inline-block fas fa-lg fa-solid fa-dollar-sign"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Consumo</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['historico']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Históricos">
+        <a [routerLink]="['historico']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Históricos">
           <i class="inline-block fa-lg fa-solid fa-chart-column"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Históricos</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['reportes']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Reportes">
+        <a [routerLink]="['reportes']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Reportes">
           <i class="inline-block fa-lg fa-solid fa-file-lines"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Reportes</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['huella']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Huella de carbono">
+        <a [routerLink]="['huella']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Huella de carbono">
           <i class=" inline-block fa-lg fa-solid fa-shoe-prints"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Huella de carbono</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['guides']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Guias y tutoriales">
+        <a [routerLink]="['guides']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Guias y tutoriales">
           <i class="inline-block fa-lg fa-solid fa-book"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Guías y tutoriales</span>
         </a>
@@ -69,19 +69,19 @@
   <div>
     <ul class="menu menu-sm bg-base-100 rounded-box z-[1]">
       <li class="p-2">
-        <a [routerLink]="['misuscription']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Mi Suscripcion">
+        <a [routerLink]="['misuscription']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Mi Suscripcion">
           <i class="inline-block fa-lg fa-solid fa-credit-card"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Mi Suscripción</span>
         </a>
       </li>
       <li class="p-2">
-        <a [routerLink]="['configuracion']" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Configuracion">
+        <a [routerLink]="['configuracion']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Configuracion">
           <i class="inline-block fa-lg fa-solid fa-cog"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Configuración</span>
         </a>
       </li>
       <li class="p-2">
-        <a (click)="logout()" class="flex items-center p-2 rounded hover:bg-gray-300 transition" title="Desloguearse">
+        <a (click)="logout()" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Desloguearse">
           <i class="inline-block fa-lg fa-solid fa-right-from-bracket"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Desloguearse</span>
         </a>
