--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -1,3 +1,15 @@
+<div class="px-3 mb-2">
+  <div class="stats shadow flex flex-wrap px-3">
+    <div class="stat w-full sm:w-1/2 md:w-1/3 lg:w-1/6" *ngFor="let device of devices">
+      <div class="stat-figure text-primary">
+        <!-- Aquí puedes agregar un ícono o imagen relacionada con el dispositivo -->
+        <img [src]="'../../../assets/icon/' + device.name + '.png'" alt="{{ device.name }}" width="32" height="32">
+      </div>
+      <div class="stat-title">{{ device.name }}</div>
+    </div>
+  </div>
+</div>
+
 <div class="container mx-auto py-1">
   <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3">
     <app-card-real-time id="step1"
@@ -34,6 +46,7 @@
 
   </div>
 </div>
+
 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-6 px-3 " id="step5" *ngIf="voltUrl && ampUrl && wattUrl && kwhUrl">
 
   <dashboard-panel
