--- a/frontend/src/app/core/card/card-info.component.html
+++ b/frontend/src/app/core/card/card-info.component.html
@@ -20,7 +20,7 @@
   <!-- Información principal y progreso Actual-->
   <div class="mt-2">
     <h2 class="text-xs text-gray-500">Mes actual</h2>
-    <h2 class="text-2xl font-bold">{{ dataCardProgress }} {{unit}}</h2>
+    <h2 class="text-2xl font-bold">{{ dataCardProgress}} {{unit}}</h2>
     <div *ngIf="showProgress" class="flex items-center justify-between mt-1">
       <progress [ngClass]="colorProgress" value="{{ valueProgress }}" max="{{ maxProgress }}" class="progress-bar"></progress>
       <span class="text-xs ml-2" [ngClass]="percentageClass">{{ valueProgress }}%</span>
@@ -31,5 +31,11 @@
   <div class="mt-2" *ngIf="showMonthPrevious">
     <h2 class="text-xs text-gray-500">Mes anterior</h2>
     <h2 class="text-2xl font-bold">{{ dataCardProgressPrevious }} {{unit}}</h2>
+  </div>
+  <div class="divider"></div>
+  <!-- Información principal y progreso del próximo mes-->
+  <div class="mt-2" *ngIf="showMonthNext">
+    <h2 class="text-xs text-gray-500">Proyección próximo mes</h2>
+    <h2 class="text-2xl font-bold">{{ dataCardProgressNext }} {{unit}}</h2>
   </div>
 </div>
