--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,40 +1,6 @@
 <app-panel-title title="Tu Huella de Carbono" description="Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible."></app-panel-title>
 <div class="py-1 px-3">
   <div class="flex items-center space-x-4">
-
-
-    <!--<div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg">
-      <div class="flex flex-col space-y-4 py-6 px-10">
-        <h2>Filtrar por Fecha</h2>
-        <div class="flex space-x-4">
-
-          <input id="startDate" type="date" class="border border-gray-300 p-2 rounded" [(ngModel)]="startDate">
-
-
-          <input id="endDate" type="date" class="border border-gray-300 p-2 rounded" [(ngModel)]="endDate">
-
-
-          <button
-            (click)="onDateChange()"
-            class="bg-primary text-white p-2 rounded hover:bg-primaryhover"
-          >
-            Mostrar
-          </button>
-        </div>
-      </div>
-      {{emissionsCO2 | json}}
-    </div>
-<!--
-Contenido de Tooltip:
-
-Árboles plantados: La cantidad de árboles necesarios para absorber el CO₂ emitido por tu consumo. Un árbol puede absorber aproximadamente 21 kg de CO₂ al año.
-
-Kilómetros en auto: Los kilómetros que se recorrerían en un vehículo promedio, emitiendo CO₂. Un automóvil emite alrededor de 120 g de CO₂ por kilómetro.
-
-Kilómetros en avión: El equivalente de CO₂ generado en vuelos comerciales. Un vuelo de corta distancia emite alrededor de 250 g de CO₂ por pasajero-km, mientras que uno de larga distancia puede emitir hasta 500 g por pasajero-km.
-
-Emisiones de gases contaminantes: La cantidad de CO₂ generada por el uso de energía, representada en kilogramos de gases contaminantes." -->
-
   </div>
     <div class="container mx-auto py-4">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
@@ -42,8 +8,10 @@ Emisiones de gases contaminantes: La cantidad de CO₂ generada por el uso de en
           [iconClasses]="'fa-solid fa-tree'"
           [titleCard]="'Arboles'"
           [showMonthPrevious] = true
+          [showMonthNext] = true
           [dataCardProgress]= KwhToTreeCO2AbsorptionCurrent
           [dataCardProgressPrevious]=KwhToTreeCO2AbsorptionPrevious
+          [dataCardProgressNext] = KwhToTreeCO2AbsorptionNext
           [subtitleCard]="'Cantidad a plantar'"
           [valueProgress]="10"
           [maxProgress]="100"
@@ -54,6 +22,8 @@ Emisiones de gases contaminantes: La cantidad de CO₂ generada por el uso de en
           [iconClasses]="'fa-solid fa-plane'"
           [titleCard]="'Vuelos'"
           [showMonthPrevious] = true
+          [showMonthNext] = true
+          [dataCardProgressNext] = KwhToFlightEmissionsNext
           [unit]="'Km'"
           [dataCardProgress]=KwhToFlightEmissionsCurrent
           [dataCardProgressPrevious]=KwhToFlightEmissionsPrevious
@@ -67,6 +37,8 @@ Emisiones de gases contaminantes: La cantidad de CO₂ generada por el uso de en
           [iconClasses]="'fa-solid fa-car'"
           [titleCard]="'Autos'"
           [showMonthPrevious] = true
+          [showMonthNext] = true
+          [dataCardProgressNext] = KwhToVehicleEmissionsNext
           [unit]="'Km'"
           [dataCardProgress]=KwhToVehicleEmissionsCurrent
           [dataCardProgressPrevious]=KwhToVehicleEmissionsPrevious
@@ -80,6 +52,8 @@ Emisiones de gases contaminantes: La cantidad de CO₂ generada por el uso de en
           [iconClasses]="'fa-solid fa-heart-crack'"
           [titleCard]="'Gases contaminantes'"
           [showMonthPrevious] = true
+          [showMonthNext] = true
+          [dataCardProgressNext] = KwhToCO2EmissionsNext
           [unit]="'Kg'"
           [dataCardProgress]=KwhToCO2EmissionsCurrent
           [dataCardProgressPrevious]=KwhToCO2EmissionsPrevious
