Device perisite seleccion para todas las secciones

--- a/frontend/src/app/core/loading/loading.component.html
+++ b/frontend/src/app/core/loading/loading.component.html
@@ -1,7 +1,17 @@
 
-<div class="flex items-center justify-center">
-  <span class="loading loading-ring loading-lg  bg-primary"></span>
-  <span class="loading loading-ring loading-lg  bg-primary"></span>
-  <span class="loading loading-ring loading-lg  bg-primary"></span>
-  <span class="loading loading-ring loading-lg  bg-primary"></span>
+<div class="overlay">
+  <span class="loading loading-spinner loading-xs bg-primary"></span>
+  <span class="loading loading-spinner loading-xs bg-primary"></span>
+  <span class="loading loading-spinner loading-sm bg-primary"></span>
+  <span class="loading loading-spinner loading-sm bg-primary"></span>
+  <span class="loading loading-spinner loading-sm bg-primary"></span>
+  <span class="loading loading-spinner loading-md bg-primary"></span>
+  <span class="loading loading-spinner loading-md bg-primary"></span>
+  <span class="loading loading-spinner loading-lg bg-primary"></span>
+  <span class="loading loading-spinner loading-md bg-primary"></span>
+  <span class="loading loading-spinner loading-md bg-primary"></span>
+  <span class="loading loading-spinner loading-sm bg-primary"></span>
+  <span class="loading loading-spinner loading-sm bg-primary"></span>
+  <span class="loading loading-spinner loading-xs bg-primary"></span>
+  <span class="loading loading-spinner loading-xs bg-primary"></span>
 </div>
