--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg">
+    <!--<div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg">
       <i class="px-1 fa-lg fa-solid fa-house-laptop"></i>
       <div>
         <span class="text-sm font-semibold">Dispositivo</span>
@@ -36,7 +36,7 @@
       <div class="ml-1 bg-blue-100 rounded-full p-1 flex items-center justify-center mb-1">
         <img [src]="'../../../assets/icon/' + deviceName + '.png'" alt="" width="32" height="32">
       </div>
-    </div>
+    </div>-->
   </div>
 
     <div class="flex items-center space-x-4">
