--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -1,7 +1,11 @@
-<div class="px-3 mb-2">
+<div *ngIf="isLoading">
+  <app-loading></app-loading>
+</div>
+<div class="px-3 mb-2" *ngIf="!isLoading">
   <div class="stats shadow flex flex-wrap px-3">
     <div class="stat w-full sm:w-1/2 md:w-1/3 lg:w-1/6" *ngFor="let device of devices">
-      <div class="stat-figure text-primary">
+      <div class="stat-figure" (click)="selectDevice(device.deviceId)"
+      [ngClass]="{'bg-blue-100 rounded-full p-1': selectedDevice === device.deviceId}">
         <!-- Aquí puedes agregar un ícono o imagen relacionada con el dispositivo -->
         <img [src]="'../../../assets/icon/' + device.name + '.png'" alt="{{ device.name }}" width="32" height="32">
       </div>
