--- a/frontend/src/app/routes/consume/consume.component.html
+++ b/frontend/src/app/routes/consume/consume.component.html
@@ -1,12 +1,43 @@
 <app-panel-title title="Consumo" description="Este es el consumo que registramos de tu dispositivo."></app-panel-title>
 <div class="px-3">
-<div class="stats shadow flex flex-wrap px-3">
-  <div class="stat w-full sm:w-1/2 md:w-1/3 lg:w-1/6" *ngFor="let device of devices">
-    <div class="stat-figure text-primary">
-      <!-- Aquí puedes agregar un ícono o imagen relacionada con el dispositivo -->
-      <img [src]="'../../../assets/icon/' + device.name + '.png'" alt="{{ device.name }}" width="32" height="32">
+  <div class="flex flex-col space-y-4"> <!-- Disposición vertical con separación -->
+    <div class="stat shadow-lg w-full p-4" *ngFor="let device of devices">
+      <div class="flex items-center">
+        <!-- Icono del dispositivo -->
+        <div class="stat-figure text-primary mr-4">
+          <img [src]="'../../../assets/icon/' + device.name + '.png'" alt="{{ device.name }}" width="32" height="32">
+        </div>
+
+        <!-- Nombre del dispositivo -->
+        <div class="stat-title text-lg font-semibold">{{ device.name }}</div>
+      </div>
+
+      <!-- Información de consumo -->
+      <div class="stat-desc grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 mt-4">
+        <!-- Consumo Último Día -->
+        <div class="stat-item">
+          <h4 class="text-xs font-semibold">Último Día</h4>
+          <p class="text-sm">{{ device.lastDayConsumption }} kWh</p>
+        </div>
+
+        <!-- Consumo Mes Actual -->
+        <div class="stat-item">
+          <h4 class="text-xs font-semibold">Mes Actual</h4>
+          <p class="text-sm">{{ device.currentMonthConsumption }} kWh</p>
+        </div>
+
+        <!-- Consumo Mes Anterior -->
+        <div class="stat-item">
+          <h4 class="text-xs font-semibold">Mes Anterior</h4>
+          <p class="text-sm">{{ device.previousMonthConsumption }} kWh</p>
+        </div>
+
+        <!-- Proyección Mes Actual -->
+        <div class="stat-item">
+          <h4 class="text-xs font-semibold">Proyección Mes Actual</h4>
+          <p class="text-sm">{{ device.projectedCurrentMonthConsumption }} kWh</p>
+        </div>
+      </div>
     </div>
-    <div class="stat-title">{{ device.name }}</div>
   </div>
-</div>
 </div>
