- added name in pair-register frontend

--- a/frontend/src/app/core/device-popup/device-popup.component.html
+++ b/frontend/src/app/core/device-popup/device-popup.component.html
@@ -66,9 +66,9 @@
       <div *ngIf="errorMessage" class="text-red-500 mt-2">
         {{ errorMessage }}
       </div>
-      <!--<p class="py-4">Puedes darle un nombre a tu dispositivo:</p>
+      <p class="py-4">Puedes darle un nombre a tu dispositivo:</p>
       <input type="text" class="input input-bordered w-full max-w-xs" placeholder="Nombre del dispositivo(opcional)"
-      [(ngModel)]="nameDevice" name="nameDevice" required/>-->
+      [(ngModel)]="nameDevice" name="nameDevice" required/>
     </div>
 
     <!-- Paso 6 -->
