--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -3,16 +3,20 @@
 </div>
 <div class="px-3 mb-2" *ngIf="!isLoading">
   <div class="stats shadow flex flex-wrap px-3">
-    <div class="stat w-full sm:w-1/2 md:w-1/3 lg:w-1/6" *ngFor="let device of devices">
-      <div class="stat-figure" (click)="selectDevice(device.deviceId)"
-      [ngClass]="{'bg-blue-100 rounded-full p-1': selectedDevice === device.deviceId}">
-        <!-- Aquí puedes agregar un ícono o imagen relacionada con el dispositivo -->
-        <img [src]="'../../../assets/icon/' + device.name + '.png'" alt="{{ device.name }}" width="32" height="32">
+    <div
+      class="stat w-full sm:w-1/2 md:w-1/3 lg:w-1/6 transform transition-transform hover:scale-105 cursor-pointer"
+      *ngFor="let device of devices"
+    (click)="selectDevice(device.deviceId)">
+
+      <div class="stat-figure" [ngClass]="{'bg-blue-100 rounded-full p-1': selectedDevice === device.deviceId}">
+        <img [src]="'../../../assets/icon/' + device.name + '.png'" alt="{{ device.name }}" width="34" height="34">
       </div>
-      <div class="stat-title">{{ device.name }}</div>
+
+      <div class="stat-title" >{{ device.name }}</div>
     </div>
   </div>
 </div>
+
 
 <div class="container mx-auto py-1">
   <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3">
