se descomenta y se agrega mas decimales

--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -10,7 +10,7 @@
           [showMonthPrevious] = true
           [showMonthNext] = true
           [dataCardProgress]= KwhToTreeCO2AbsorptionCurrent
-          [dataCardProgressPrevious]=KwhToTreeCO2AbsorptionPrevious
+          [dataCardProgressPrevious]= KwhToTreeCO2AbsorptionPrevious
           [dataCardProgressNext] = KwhToTreeCO2AbsorptionNext
           [subtitleCard]="'Cantidad a plantar'"
           [valueProgress]="10"
