--- a/frontend/src/app/core/card/card-info.component.html
+++ b/frontend/src/app/core/card/card-info.component.html
@@ -30,12 +30,12 @@
   <!-- Información principal y progreso Mes anterior-->
   <div class="mt-2" *ngIf="showMonthPrevious">
     <h2 class="text-xs text-gray-500">Mes anterior</h2>
-    <h2 class="text-2xl font-bold">{{ dataCardProgressPrevious }} {{unit}}</h2>
+    <h2 class="text-2xl font-bold">{{ dataCardProgressPrevious   | number:'1.5-5'}} {{unit}}</h2>
   </div>
   <div class="divider"></div>
   <!-- Información principal y progreso del próximo mes-->
   <div class="mt-2" *ngIf="showMonthNext">
     <h2 class="text-xs text-gray-500">Proyección próximo mes</h2>
-    <h2 class="text-2xl font-bold">{{ dataCardProgressNext }} {{unit}}</h2>
+    <h2 class="text-2xl font-bold">{{ dataCardProgressNext  | number:'1.5-5'}} {{unit}}</h2>
   </div>
 </div>
